essais de fixtures

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,6 +20,10 @@
                 <li><a href="{{ path('picture_index') }}">Photos</a></li>  
             </ul>
         </nav>
+
     </header>
+
+    <div class="content">
+    </div>
 
 {% endblock %}
