--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,11 @@ body {
     background: #222;
     font-family: 'Work Sans', sans-serif;
     font-weight: 400;
+    color: #faebd7;
+}
+
+H1 {
+    text-align: center;
 }
 
 .content {
