--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}MAM Tremblay s/ Mauldre{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="css/style.css">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
     </head>
     <body>
